# irl-srt-server

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  AUDIO_GAP_FILLING.md  BITRATE_LIMITING.md  CLAUDE.md  CMakeLists.txt  CONFIGURATION.md  ChangeLog.md  Dockerfile  PLAYER_KEY_IMPLEMENTATION.md  README.md
.github/workflows/: ci.yml  docker-publish.yaml
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
plans/: 000-macos-portability.md  001-verification-baseline.md  002-security-quick-wins.md  003-memory-concurrency.md  004-correctness-perf-cleanups.md  005-build-supply-chain.md  006-documentation.md  007-architecture-refactors.md  008-mapdata-lock-rework.md  009-decompose-listener-handler.md  010-split-common-and-manager.md  011-relay-manager-dedup.md  012-worker-affinity.md  README.md
src/: CMakeLists.txt  sls.conf  srt-live-client.cpp  srt-live-server.cpp
src/core/: AsyncHttpClient.cpp  AsyncHttpClient.hpp  CMakeLists.txt  SLSArray.cpp  SLSAudioGapFiller.cpp  SLSAudioGapFiller.hpp  SLSBitrateLimit.cpp  SLSBitrateLimit.hpp  SLSClient.cpp  SLSClient.hpp  SLSEpollThread.cpp  SLSEpollThread.hpp  SLSGroup.cpp  SLSGroup.hpp  SLSHandle.hpp  SLSJsonSink.hpp  SLSListener.cpp  SLSListener.hpp  SLSListenerAuth.cpp  SLSListenerConfig.cpp  SLSListenerCore.cpp  SLSListenerHandler.cpp  SLSLock.hpp  SLSLog.cpp  SLSLog.hpp  SLSLogCategory.hpp  SLSLogRateLimiter.cpp  SLSLogRateLimiter.hpp  SLSManager.cpp  SLSManager.hpp  SLSMapData.cpp  SLSMapData.hpp  SLSMapPublisher.cpp  SLSMapPublisher.hpp  SLSMapRelay.cpp  SLSMapRelay.hpp  SLSPlayer.cpp  SLSPlayer.hpp  SLSPublisher.cpp  SLSPublisher.hpp  (+43 more)
tests/: CMakeLists.txt  test_audio_gap_filler.cpp  test_auth_reject_cache.cpp  test_bitrate_limit.cpp  test_idle.cpp  test_ip_acl.cpp  test_log_rate_limiter.cpp  test_map_data.cpp  test_push_url.cpp  test_recycle_array.cpp  test_sls_sid.cpp  test_ts_parser.cpp
tests/e2e/: normalize-stats.jq  reconnect_replay.sh  sls-reconnect.conf  sls-stats.conf  stats_snapshot.sh
tests/fixtures/: healthz-shape.json  stats-shape.json  stats-unauthorized-shape.json
tests/fuzz/: CMakeLists.txt  fuzz_conf.cpp  fuzz_streamid.cpp  fuzz_ts_parser.cpp  gen_seed_corpus.py  ubsan_suppressions.txt
tests/fuzz/corpus/conf/: dedupe  list  range  reversed_range  single_range  trailing_comma  upstreams  whitespace
tests/fuzz/corpus/streamid/: amp_inject  control_byte  missing_key  not_a_streamid  reordered  tab_byte  traversal_std  url_inject  valid_bare  valid_dotnames  valid_std  whitespace
tools/: sls-diag-scrape.sh
